sna: Handle getblob failures gracefully

As the EDID property blob may be lost at time after we perform the
detection probe (as the kernel may recreate the EDID blob at any time with
a new id), presume that if there is no matching property that we can
simply keep using the last known EDID.

References: https://bugs.freedesktop.org/show_bug.cgi?id=92728
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>